
7.0.9 (F6BVP, Dave van der Locht) 
[r178]
- fbblog files renamed from 0 to 52 for week number 
- fbb log displayed calling executable script /usr/local/bin/fbblog 
- Some functions are done via system() calls. However, observed return value
  is invariably -1 while it should reflect the result of called program.
  It happened because the SIGCHILD signal handler was set to SIG_IGN.
  Fixed at the beginning of the main function in xfbbd.c.
- 7.0.8-beta9 was hanging. xfbbd.c patched.
- Return value of system() is always -1 due to SIGCHLD signal was ignored.
- Added 'fail-safe bypass' in case call_nbdos() couldn't find the 
  command/executable to run.
- Replaced system() with popen() in the call_nbdos() function to fix the
  problem with response text from a c_filter not coming through.
- PG servers returned errors. Tested by Brian N1URO

*******************************************************************************

SVN 02-02-2020 (Dave van der Locht)
[r187]
- Fixed gateway using wrong FROM callsign with outgoing socket connections.
- Fixed gateway could only use port 1 to 9.
- New 20_epurmess and 20_epurwp maintenance scripts (N1URO).
- Fixed pagination issue with ? command, C (remove paging) didn't work.
- Cleaned obsolete code, fast_fwd was hard set to 1 in init.c but only used 
  in some 'if' statements. 
- Corrected satdoc.c line 384 gcc compiler warning (-Wstringop-overflow)
- Corrected behaviour of /K and /L sysop commands
- Fixed buffer overflow possibility in ibm.c getcurdir()
- Corrected several misleading indentations
- Cleaned code and comments in xfbbd.c

SVN 15-05-2020 Dave van der Locht)
[r188]
- Fixed problem where inbound connections were disconnected after connect
  with some port types when port in port.sys was higher than 9.
- Commented debugging printf code in the call_nbdos() function.
- Changed version number to 7.0.10 for the upcoming release

*******************************************************************************